# video-finder

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  config.py  constants.py  main.py  models.py  schemas.py
app/db/: database.py
app/downloaders/: __init__.py  base.py  ffmpeg.py  http.py  ytdlp.py
app/services/: __init__.py  downloader.py  extractor.py  parser.py  progress.py  safety.py  sniffer.py  storage.py
app/web/: routes.py
app/web/templates/: index.html
docs/plans/: OPTIMIZATION_PLAN_2026-05-10.md
docs/reviews/: CODE_REVIEW_2026-05-10.md  CODE_REVIEW_2026-05-11.md
scripts/: sniff_test.py
tests/: __init__.py  conftest.py  test_cli.py  test_config_persistence.py  test_downloader.py  test_extractor.py  test_integration.py  test_optimization.py  test_parser.py  test_progress.py  test_real_world.py  test_safety.py  test_sniffer_logic.py  test_storage.py
